# unscope

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  tc_mingw.cmake  tc_mingw_w32.cmake
assets/: release_linux.sh  release_win.sh  release_win32.sh
src/: main.cpp  shared.h
src/audio/: audio.cpp  audio.h  audioInput.cpp  audioProcess.cpp  trigger.h
src/audio/io/: abstract.cpp  audio_pa.cpp  audio_pa.h
src/audio/processNodes/: abstract.cpp  blank.cpp  blank.h
src/audio/trigger/: abstract.cpp  analog.h  fallback.cpp  fallback.h
src/config/: config.cpp  config.h  extData.cpp  extData.h
src/gui/: consts.cpp  gui.cpp  gui.h  imconfig.h  user_config.h
src/gui/render/: abstract.cpp  render_directx11.cpp  render_directx11.h  render_directx11_sdl.cpp  render_directx11_sdl.h  render_directx9.cpp  render_directx9.h  render_opengl2.cpp  render_opengl2.h  render_opengl_sdl.cpp  render_opengl_sdl.h  render_sdl2renderer.cpp  render_sdl2renderer.h
src/gui/wins/: about.cpp  audioConfig.cpp  ctrls.cpp  cursors.cpp  nodes.cpp  oscs.cpp  settings.cpp  spectrum.cpp
src/trigger/: abstract.cpp  analog.cpp  analog.h  fallback.cpp  fallback.h  params.cpp  smooth.cpp  smooth.h  trigger.h
